test/interaction/Cmd_load_no_metas.out
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-info-action "*Error*" "Cmd_load_no_metas.agda:3.1-2: error: [UnsolvedMetaVariables] Unsolved metas at the following locations: Cmd_load_no_metas.agda:3.1-2 Cmd_load_no_metas.agda:3.5-6: error: [UnsolvedInteractionMetas] Unsolved interaction metas at the following locations: Cmd_load_no_metas.agda:3.5-6" nil)
(agda2-highlight-load-and-delete-action)
(agda2-status-action "")
