test/interaction/Cmd_load_no_metas.agda
-- Andreas, 2024-08-02, cover command Cmd_load_no_metas

f = ?

-- This should fail as no unsolved metas are allowed.
